speach tests for Angular fire database

--- a/src/app/speach/speach.component.html
+++ b/src/app/speach/speach.component.html
@@ -1,3 +1,3 @@
 <main style="text-align:center">
-  <button mat-fab color="primary">Fajne</button>
+  <button mat-fab color="primary" [disabled]="!(connected | async)">Fajne</button>
 </main>
