initial auth architecture prepared

--- a/src/app/speach/speach.component.html
+++ b/src/app/speach/speach.component.html
@@ -1,3 +1,1 @@
-<main style="text-align:center">
-  <button mat-fab color="primary" [disabled]="!(connected | async)">Fajne</button>
-</main>
+<button mat-fab color="primary" [disabled]="!(connected | async)">{{ contextAction }}</button>
