--- a/src/app/speach/speach.component.html
+++ b/src/app/speach/speach.component.html
@@ -1,1 +1,1 @@
-<button mat-fab color="primary" [disabled]="!(connected | async)">{{ contextAction }}</button>
+<button (click)="performContextAction()" mat-fab color="primary" [disabled]="!(connected | async)">{{ contextAction }}</button>
