Speaker transitions done

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,3 +3,7 @@ $font-normal: 16px;
 $font-large: 18px;
 $font-xlarge: 20px;
 $font-2x-large: 22px;
+
+$app-color-rebeccapurple: rebeccapurple;
+$app-color-red-01: #a52c06;
+$app-color-white: white;
