--- a/src/app/speach/speach.component.scss
+++ b/src/app/speach/speach.component.scss
@@ -12,4 +12,21 @@ button {
   width: 6rem;
   height: 6rem;
   font-size: $font-2x-large;
+  color: $app-color-white;
+}
+
+.login-view {
+
+}
+
+.speach-start {
+  background: $app-color-rebeccapurple;
+}
+
+.participant-in-speach {
+
+}
+
+.speaker-in-speach {
+  background: $app-color-red-01;
 }
