new connection status

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <mat-card>
-    This app is connected: {{ connected | async }}
+    <span *ngIf="!(connected | async)">Waiting for connection</span>
   </mat-card>
 </header>
 
