naming convention is now reusable

--- a/src/app/speach/action.component.scss
+++ b/src/app/speach/action.component.scss
@@ -19,14 +19,14 @@ button {
 
 }
 
-.speach-start {
+.action-start {
   background: $app-color-rebeccapurple;
 }
 
-.participant-in-speach {
+.participant-in-action {
 
 }
 
-.speaker-in-speach {
+.performer-in-action {
   background: $app-color-red-01;
 }
