--- a/src/app/action/action.component.scss
+++ b/src/app/action/action.component.scss
@@ -9,9 +9,9 @@
 }
 
 button {
-  width: 6rem;
-  height: 6rem;
-  font-size: $font-2x-large;
+  width: 14rem;
+  height: 14rem;
+  font-size: $font-context-button;
   color: $app-color-white;
 }
 
