--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -3,6 +3,8 @@ $font-normal: 16px;
 $font-large: 18px;
 $font-xlarge: 20px;
 $font-2x-large: 22px;
+$font-2x-large: 22px;
+$font-context-button: 40px;
 
 $app-color-rebeccapurple: rebeccapurple;
 $app-color-red-01: #a52c06;
