Counter on button

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -6,6 +6,7 @@ $font-2x-large: 22px;
 $font-2x-large: 22px;
 $font-context-button: 40px;
 
-$app-color-rebeccapurple: rebeccapurple;
-$app-color-red-01: #a52c06;
+$app-color-start: rebeccapurple;
+$app-color-finish: #a52c06;
+$app-color-result: #d2ad26;
 $app-color-white: white;
