--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,1 +1,1 @@
-<button [ngClass]="buttonContextClass" (click)="performContextAction()" mat-fab color="primary" [disabled]="!(connected | async)">{{ nextContextAction }}</button>
+<button [ngClass]="buttonContextClass" (click)="performContextAction()" mat-fab color="primary" [disabled]="!(loggedIn | async)">{{ nextContextAction }}</button>
