--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <mat-card>
-    <span *ngIf="!(connected | async)">Waiting for connection</span>
+    <span *ngIf="!(loggedIn | async)">Waiting for connection</span>
     <span *ngIf="isResultAvailable">You got {{ result }}</span>
   </mat-card>
 </header>
