top box removed

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -10,3 +10,6 @@ $app-color-start: rebeccapurple;
 $app-color-finish: #a52c06;
 $app-color-result: #d2ad26;
 $app-color-white: white;
+
+$main-view-height: 90vh;
+$context-button-relative-top: 40px;
