--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -9,6 +9,7 @@ $font-context-button: 40px;
 $app-color-start: rebeccapurple;
 $app-color-finish: #a52c06;
 $app-color-result: #d2ad26;
+$app-color-thanks: #327916;
 $app-color-white: white;
 
 $main-view-height: 90vh;
