--- a/src/app/action/action.component.html
+++ b/src/app/action/action.component.html
@@ -1,1 +1,5 @@
-<button [ngClass]="buttonContextClass" (click)="performContextAction()" mat-fab color="primary" [disabled]="!(authService.user$ | async)">{{ nextContextAction }}</button>
+<button
+  [ngClass]="actionButton.buttonContextClass"
+  (click)="performContextAction()"
+  mat-fab color="primary"
+  [disabled]="!(authService.user$ | async)">{{ actionButton.nextContextAction }}</button>
