--- a/src/app/action/action.component.scss
+++ b/src/app/action/action.component.scss
@@ -40,3 +40,10 @@ button {
 .thank-you-information {
   background: $app-color-thanks;
 }
+
+.chart {
+  width: 100%;
+  height: 400px;
+  margin: 1em auto;
+  top: $context-button-relative-top;
+}
