--- a/src/app/action/action.component.scss
+++ b/src/app/action/action.component.scss
@@ -14,7 +14,7 @@ button {
   font-size: $font-context-button;
   color: $app-color-white;
   position: relative;
-  top: $context-button-relative-top;
+  top: $fajne-button-relative-top;
 }
 
 .login-view {
@@ -42,8 +42,9 @@ button {
 }
 
 .chart {
+  position: relative;
   width: 100%;
   height: 400px;
   margin: 1em auto;
-  top: $context-button-relative-top;
+  top: $fajne-chart-relative-top;
 }
